# py-zkCNN

./: .gitignore  CMakeLists.txt  CMakeLists_python_bindings.txt  DATA_FILES_INTEGRATION.md  DEMO_RESULTS_SUMMARY.md  README.md  SUBPROCESS_DEMO_SUCCESS.md  WSL_DEMO_GUIDE.md  bls12_381_ctypes_interface.py  bls12_381_ctypes_interface_simple.py  bls12_381_wrapper.cpp  build_bls12_381_wsl.sh  comparison_analysis.md  cpp_backend_interface.py  demo_comparison.py  demo_cpp_backend.py  demo_usage_guide.py  gkr_core.py  hybrid_zkcnn_cryptographic.py  performance_test_corrected.py  performance_test_real_bls12_381.py  run_test_wsl.sh  run_zkcnn_wsl.py  simple_performance_test.json  simple_performance_test.py  subprocess_demo.py  test_proof_size.py  test_real_verification.py  test_verification.py  test_wsl_bls12_381.py  zkCNN.py  zkCNN_advanced.py  zkCNN_advanced_working.py  zkCNN_gkr_enhanced.py  zkCNN_multi_models.py  zkCNN_zk.py  zkcnn_config.json  zkcnn_cpp_bindings.py  zkcnn_performance_metrics.json  zkcnn_subprocess_wrapper.py
Phase 1/: ORGANIZATION_SUMMARY.md  README.md  zkCNN_advanced.py  zkCNN_advanced_working.py
Phase 1/data/vgg11/: vgg11.cifar.relu-1-images-weights-qint8.csv
Phase 2/: ORGANIZATION_SUMMARY.md  README.md  subprocess_demo.py  zkcnn_subprocess_wrapper.py
Phase 2/data/lenet5.mnist.relu.max/: lenet5.mnist.relu.max-1-images-weights-qint8.csv  lenet5.mnist.relu.max-1-scale-zeropoint-uint8.csv
Phase 2/data/vgg11/: vgg11-config.csv  vgg11.cifar.relu-1-images-weights-qint8.csv  vgg11.cifar.relu-1-scale-zeropoint-uint8.csv
Phase 2/output/single/: demo-result-lenet5.txt
Phase 3/: CMakeLists_ctypes.txt  CMakeLists_ctypes_simple.txt  ORGANIZATION_SUMMARY.md  README.md  bls12_381_ctypes_interface_simple.py  bls12_381_ctypes_wrapper.cpp  bls12_381_ctypes_wrapper_hyrax.cpp  bls12_381_ctypes_wrapper_minimal.cpp  bls12_381_ctypes_wrapper_simple.cpp  install.bat  install.sh  requirements.txt  setup.py  zkCNN_multi_models.py  zkcnn_performance_metrics.json
Phase 3/data/vgg11/: vgg11.cifar.relu-1-scale-zeropoint-uint8.csv
Phase 3/output/single/: lenet5.mnist.relu.max-1-infer.csv  vgg11.cifar.relu-1-infer.csv
Phase 3/tests/: test_final_implementation.py  test_performance_metrics.py  test_zkcnn_wsl_comprehensive.py
cpp_backend/: CMakeLists.txt  zkcnn_backend.cpp
cpp_backend/build/: CMakeCache.txt
script/: build.sh  demo_alexnet.sh
src/: CMakeLists.txt  CMakeLists_simple.txt  main_demo_alexnet.cpp  models.cpp  models.hpp
